--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,51 @@
-# Node
-frontend/node_modules/
-frontend/dist/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
+# ========================
 # Python
+# ========================
 __pycache__/
-*.pyc
-.pytest_cache/
+*.py[cod]
+*.pyo
+*.pyd
+
+# ========================
+# Virtual Environments
+# ========================
 .venv/
 venv/
-.ruff_cache/
+env/
+backend/.venv/
 
-# Env & local
+# ========================
+# Environment Variables
+# ========================
 .env
 .env.*
-*.sqlite3
-portfolio.db
 
-# OS/Editor
+# ========================
+# Databases
+# ========================
+*.db
+*.sqlite3
+
+# ========================
+# IDE / Editor
+# ========================
+.vscode/
+.idea/
+
+# ========================
+# OS Files
+# ========================
 .DS_Store
 Thumbs.db
-.idea/
-.vscode/
 
+# ========================
+# Logs
+# ========================
+*.log
+
+# ========================
+# Frontend (optional – depends on setup)
+# ========================
+node_modules/
+dist/
+build/
