--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,17 @@
 version: "3.9"
 
 services:
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: portfolio-backend
+    ports:
+      - "8000:8000"
+    volumes:
+      - backend_db:/app/data
+    restart: unless-stopped
+
   frontend:
     build:
       context: ./frontend
@@ -8,4 +19,9 @@ services:
     container_name: portfolio-frontend
     ports:
       - "3000:80"
+    depends_on:
+      - backend
     restart: unless-stopped
+
+volumes:
+  backend_db:
