--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     container_name: portfolio-backend
     ports:
       - "8000:8000"
+    env_file:
+      - ./backend/.env
     volumes:
       - backend_db:/app/data
     restart: unless-stopped
