--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,8 @@ backend/.venv/
 # ========================
 # Environment Variables
 # ========================
-.env
-.env.*
+# .env
+# .env.*
 
 # ========================
 # Databases
