changes for deployment

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 AWS_REGION=us-east-1
 SNS_ADMIN_TOPIC_ARN=arn:aws:sns:us-east-1:212467110829:SNStopicportfolio
+VITE_API_URL=https://<username>.pythonanywhere.com
